feature/IVYPORTAL-17181-Drill-down-implementation
- Update function createDrillDownDashboardInSession